--- a/templates/all.html
+++ b/templates/all.html
@@ -40,7 +40,7 @@
                     class="h-10 w-auto">
             </a>
             <ul class="flex gap-2 md:gap-3">
-                <li><a href="/"
+                <li><a href="/main.html"
                         class="flex items-center justify-center rounded-full px-4 py-2 text-[14px] md:text-[15px] font-bold text-gray-600 bg-gray-100 hover:bg-gray-200 transition-all">Home</a>
                 </li>
                 <li><a href="/all.html"
